fix: code wrapping (again!)

--- a/src/css/markdown.css
+++ b/src/css/markdown.css
@@ -143,7 +143,7 @@ padding: 0;
 .rrmd pre>code {
     margin: 0;
     padding: 0;
-    white-space: inherit;
+    white-space: nowrap;
     border: none;
     background: transparent;
 }
